Add CkNN graph construction

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,10 @@ version = 0.1
 author = Davi Sidarta-Oliveira
 author_email = davisidarta@fcm.unicamp.br
 description = Fast Laplacian Eigenmaps for dimensionality reduction.
-long_description = file: README.md
+long_description = file: README.MD
 long_description_content_type = text/markdown
 url = https://github.com/davisidarta/fastlapmap
+license = MIT
 project_urls =
     Bug Tracker = https://github.com/davisidarta/fastlapmap/issues
 classifiers =
